Bug 956032 - text selection change event is missed when selected text becomes unselected, r=tbsaunde