accessible/src/base/AccEvent.cpp
@@ -12,6 +12,7 @@
 #include "States.h"
 
 #include "nsEventStateManager.h"
+#include "mozilla/Selection.h"
 
 using namespace mozilla;
 using namespace mozilla::a11y;
@@ -126,12 +127,21 @@ AccShowEvent::
 ////////////////////////////////////////////////////////////////////////////////
 
 AccTextSelChangeEvent::AccTextSelChangeEvent(HyperTextAccessible* aTarget,
-                                             nsISelection* aSelection) :
+                                             Selection* aSelection,
+                                             int32_t aReason) :
   AccEvent(nsIAccessibleEvent::EVENT_TEXT_SELECTION_CHANGED, aTarget,
            eAutoDetect, eCoalesceTextSelChange),
-  mSel(aSelection) {}
+  mSel(aSelection), mReason(aReason) {}
 
 AccTextSelChangeEvent::~AccTextSelChangeEvent() { }
+
+bool
+AccTextSelChangeEvent::IsCaretMoveOnly() const
+{
+  return mSel->GetRangeCount() == 1 && mSel->IsCollapsed() &&
+    ((mReason & (nsISelectionListener::COLLAPSETOSTART_REASON |
+                 nsISelectionListener::COLLAPSETOEND_REASON)) == 0);
+}
 
 ////////////////////////////////////////////////////////////////////////////////
 // AccSelChangeEvent
